k8s/manifests-49bbf6/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-49bbf6
  namespace: journee
  labels:
    app: journee-49bbf6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-49bbf6
  template:
    metadata:
      labels:
        app: journee-49bbf6
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-49bbf6
          image: gcr.io/my-docker-471807/journee:49bbf6-787135
          ports:
            - containerPort: 3000
