k8s/manifests-49bbf6/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-49bbf6
  namespace: journee
spec:
  selector:
    app: journee-49bbf6
  ports:
    - port: 80
      targetPort: 3000
